first home page done

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+
+<div class="banner">
+  <div class="banner-container">
+    <h1>Food Basket</h1>
+    <p>Trouvez ou partagez de la nourriture près de chez vous</p>
+  </div>
+</div>
