--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,7 +2,9 @@
 @import "config/fonts";
 @import "config/colors";
 @import "config/bootstrap_variables";
-@import url('https://fonts.googleapis.com/css?family=Nunito&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Dosis&display=swap');
+
 
 // External libraries
 @import "bootstrap/scss/bootstrap";
@@ -13,6 +15,10 @@
 @import "components/index";
 @import "pages/index";
 
-* {
- font-family: 'Nunito', sans-serif !important;
+body {
+  font-family: 'Open Sans', sans-serif !important;
+}
+
+h1, h2, h3, h4, h5 {
+ font-family: 'Dosis', sans-serif !important;
 }
