--- a/app/assets/stylesheets/components/_signup.scss
+++ b/app/assets/stylesheets/components/_signup.scss
@@ -7,22 +7,25 @@
     background-image: url(https://cdn.dribbble.com/users/1043327/screenshots/2438076/05-_0-00-03-24_.jpg);
     background-size: cover;
     background-position: center;
- }
-}
-
-.full-name {
+  }
+ .full-name {
   display: flex;
   justify-content: space-between;
+  }
 }
 
-.signup-title {
-  margin: 0 -15px 10px -15px  !important;
+.login {
+  text-align: center;
+  margin-bottom: 5px;
+  color: black;
+  &:hover {
+    text-decoration: none;
+    color: black;
+  }
 }
 
 
-.prenom {
-  margin-right: 10px !important;
-}
+
 
 @media (max-width: 768px) {
   .signup-image {
