--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,6 @@
 <div class="container col-10 col-md-8">
-  <div class="sign-up-form d-flex">
+  <div class="sign-up-form d-flex mb-5">
     <div class="signup-image col-6">
-      <%= render "devise/shared/links" %>
     </div>
     <div class="form col-12 col-md-6">
       <h2 class="text-center p-3 signup-title">Créer un compte</h2>
