--- a/app/views/paniers/index.html.erb
+++ b/app/views/paniers/index.html.erb
@@ -1,2 +1,22 @@
-<h1>Paniers#index</h1>
-<p>Find me in app/views/paniers/index.html.erb</p>
+<div class="main">
+  <div class="circle"></div>
+  <div class="grid">
+    <div class="search">
+      <h1>Food Basket</h1>
+      <p>Réduisez le gaspillage alimentaire.</p>
+      <div class="search-form">
+        <p>Trouvez des paniers près de chez vous</p>
+        <form action="#">
+            <input type="text" id="search-bar" placeholder="Entrez un lieu" class="form-control">
+            <button type="submit" class="btn btn-primary"><i class="fas fa-search-location"></i></button>
+        </form>
+      </div>
+    </div>
+    <div class="banner">
+      <img src="https://i.pinimg.com/originals/b0/91/83/b09183361058ad8574c73557f5dadc51.jpg" alt="fridge full of food">
+    </div>
+  </div>
+</div>
+<div class="how-to">
+  <h2 class="text-center how-to-title">Comment ça fonctionne ?</h2>
+</div>
