--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,32 @@
-
-<div class="banner">
-  <div class="banner-container">
-    <h1>Food Basket</h1>
-    <p>Trouvez ou partagez de la nourriture près de chez vous</p>
+<div class="main">
+  <div class="circle"></div>
+  <div class="grid">
+    <div class="search">
+      <h1>Food Basket</h1>
+      <p>Réduisez le gaspillage alimentaire.</p>
+      <div class="search-form">
+        <p id="search-text">Trouvez des paniers près de chez vous</p>
+        <form action="#">
+            <input type="text" id="search-bar" placeholder="Entrez un lieu" class="form-control">
+            <button type="submit" class="btn btn-primary"><i class="fas fa-search-location"></i></button>
+        </form>
+      </div>
+    </div>
+    <div class="banner">
+      <img src="https://i.pinimg.com/originals/b0/91/83/b09183361058ad8574c73557f5dadc51.jpg" alt="fridge full of food">
+    </div>
+  </div>
+</div>
+<div class="how-to">
+  <div class="how-to-title">
+    <h2 class="text-center">Comment ça fonctionne ?</h2>
+    <div class="information-grid">
+      <div class="first-left">
+        test
+      </div>
+      <div class="first-right">
+        test
+      </div>
+    </div>
   </div>
 </div>
