--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
   <div class="grid">
     <div class="search">
       <h1>Food Basket</h1>
-      <p>Réduisez le gaspillage alimentaire.</p>
+      <p>Réduisez le gaspillage alimentaire</p>
       <div class="search-form">
         <p id="search-text">Trouvez des paniers près de chez vous</p>
         <form action="#">
@@ -17,16 +17,28 @@
     </div>
   </div>
 </div>
-<div class="how-to">
+<div class="how-to bg-white">
   <div class="how-to-title">
     <h2 class="text-center">Comment ça fonctionne ?</h2>
-    <div class="information-grid">
-      <div class="first-left">
-        test
-      </div>
-      <div class="first-right">
-        test
-      </div>
+  </div>
+  <div class="information-grid">
+    <div class="first-left bg-light">
+    </div>
+    <div class="first-right">
+      <h2>Stop au gaspillage</h2>
+      <p class="text-center">Vous partez en voyage et vous ne voulez pas jeter les restes de votre frigo ?</p>
+    </div>
+    <div class="second-left">
+      <h2>Créer un panier</h2>
+      <p class="text-center">Rendez vous sur Food Basket et rentrez les coordonnées de votre panier.</p>
+    </div>
+    <div class="second-right bg-light">
+    </div>
+    <div class="third-left bg-light">
+    </div>
+    <div class="third-right">
+      <h2>Récupération du panier</h2>
+      <p class="text-center p-3">Si quelqu'un est intéressé par votre panier, il prendra contact avec vous pour venir le chercher.</p>
     </div>
   </div>
 </div>
