--- a/app/views/paniers/new.html.erb
+++ b/app/views/paniers/new.html.erb
@@ -1,15 +1,18 @@
-<div class="container">
+<div class="container col-9">
   <h1>Proposez un panier</h1>
   <%= simple_form_for @panier do |f| %>
     <%= f.input :titre, label: 'Titre',
                 input_html: { maxlength: 30},
                 placeholder: 'Produits laitiers et légumes...' %>
-    <%= f.input :category, as: :radio_buttons, collection: %w(Omnivore Végétarien Vegan),
-                label: 'Type de panier' %>
+    <div class="radio-buttons">
+      <%# f.input :category, as: :radio_buttons, collection: %w(Omnivore🍖 Végétarien🧀 Vegan🍆),
+                label: 'Type de panier'%>
+    </div>
     <%= f.input :deadline, label: 'Date et heure de retrait',
                 input_html: {class: "datepicker"} %>
     <%= f.input :tag_list, label: "Aliments", hint: "Ajoutez les aliments séparés par des virgules." %>
-    <%= f.input :photo %>
+    <%= f.input :photo, input_html: { class: 'btn-hidden'},
+            label_html: { class: 'upload-photo'}, label: '📷 Ajouter une photo'  %>
     <%= f.input :photo_cache, as: :hidden %>
     <%= f.button :submit, class: 'btn btn-primary', value: 'Proposer le panier' %>
   <% end %>
