--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="circle"></div>
   <div class="grid">
     <div class="search">
-      <h1>Food Basket</h1>
+      <h1 style="font-weight: bold;">Food Basket</h1>
       <p>Réduisez le gaspillage alimentaire</p>
       <div class="search-form">
         <p id="search-text">Trouvez des paniers près de chez vous</p>
