added query selector

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,10 +6,17 @@
       <p>Réduisez le gaspillage alimentaire</p>
       <div class="search-form">
         <p id="search-text">Trouvez des paniers près de chez vous</p>
-        <form action="#">
+        <!-- <form action="/paniers" method="get">
             <input type="text" id="search-bar" placeholder="Entrez un lieu" class="form-control">
             <button type="submit" class="btn btn-primary"><i class="fas fa-search-location"></i></button>
-        </form>
+        </form> -->
+        <%= form_tag paniers_path, method: :get do %>
+          <%= text_field_tag :query,
+            params[:query],
+            class: "form-control",
+            placeholder: "Find a movie"
+          %>
+        <% end %>
       </div>
     </div>
     <div class="banner">
