--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -15,6 +15,13 @@
   border-radius: 0 10px 10px 0;
 }
 
+#search-navbar {
+  border-radius: 10px;
+  border: 1px solid #ced4da;
+  padding: 5px 10px;
+  width: 100%;
+}
+
 span {
   font-size: 36px;
 }
