--- a/app/views/paniers/index.html.erb
+++ b/app/views/paniers/index.html.erb
@@ -2,7 +2,7 @@
   <h1>TEST PAGE</h1>
   <% console %>
   <p>Panier près de <%= @query %></p>
-  <% @paniers_a_proximite[0].each  do |panier|   %>
+  <% @paniers_a_proximite.each  do |panier| %>
     <p><%= panier.titre %></p>
   <% end %>
 </div>
