add adress to panier

--- a/app/views/paniers/index.html.erb
+++ b/app/views/paniers/index.html.erb
@@ -1,9 +1,15 @@
 <div class="container">
-  <h1>TEST PAGE</h1>
-  <% console %>
-  <p>Panier près de <%= @query %></p>
+  <h1>Paniers près de <%= @query %></h1>
   <% @paniers_a_proximite.each  do |panier| %>
     <p><%= panier.titre %></p>
   <% end %>
+
+  <div
+  id="map"
+  style="width: 100%;
+  height: 600px;"
+  data-markers="<%= @markers.to_json %>"
+  data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+  ></div>
 </div>
 
