adresse is now on the food basket

--- a/app/views/paniers/index.html.erb
+++ b/app/views/paniers/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>Paniers près de <%= @query %></h1>
-  <% @paniers_a_proximite.each  do |panier| %>
+  <% @paniers_alentour.each  do |panier| %>
     <p><%= panier.titre %></p>
   <% end %>
 
