implemented algolia autocomplete

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -39,10 +39,10 @@ $blue: #87b4bd;
 }
 
 #search-bar {
-  border-radius: 10px 0 0 10px;
-  border: 1px solid #ced4da;
-  padding: 5px 10px;
-  width: 100%;
+  border-radius: 10px 0 0 10px !important;
+  border: 1px solid #ced4da !important;
+  padding: 5px 10px !important;
+  width: 100% !important;
 }
 
 
