added tag list to the seed

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -2,3 +2,9 @@
   box-shadow: 0 0 12px grey;
   border-radius: 5px;
 }
+
+.index-panier-card {
+  box-shadow: 0 0 12px grey;
+  border-radius: 5px;
+  height: 100px;
+}
