--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,8 +1,15 @@
-.mapboxgl-popup {
-  max-width: 200px;
+#map {
+  width: 30%;
+  height: 100vh;
+  position: sticky;
+  top: 0;
 }
 
 .mapboxgl-popup-content {
   text-align: center;
   font-family: 'Open Sans', sans-serif;
+}
+
+.mapboxgl-popup {
+  max-width: 200px;
 }
