--- a/app/assets/stylesheets/components/_grid.scss
+++ b/app/assets/stylesheets/components/_grid.scss
@@ -53,3 +53,12 @@
     color: black;
   }
 }
+
+
+.index-panier-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 16px;
+  padding: 20px 20px;
+  flex-grow: 1;
+}
