sticked map on the right side

--- a/app/assets/stylesheets/components/_title.scss
+++ b/app/assets/stylesheets/components/_title.scss
@@ -4,3 +4,11 @@
   margin-top: -30px;
   padding: 30px;
 }
+
+.index-panier-card-title {
+  background-color: $blue;
+  color: white;
+  background-size: cover;
+  border-radius: 5px 5px 0 0;
+  padding: 10px 15px;
+}
