--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -4,7 +4,14 @@
 }
 
 .index-panier-card {
+  position: relative;
   box-shadow: 0 0 12px grey;
   border-radius: 5px;
-  height: 100px;
+  width: 95%;
+  height: 250px;
+  justify-self:center;
+  .content-position {
+    position: absolute;
+    bottom: 0;
+  }
 }
