--- a/app/views/paniers/index.html.erb
+++ b/app/views/paniers/index.html.erb
@@ -1,11 +1,21 @@
 
-  <h1>Paniers près de <%= @query %></h1>
+  <h1 class="ml-4">Paniers près de <%= @query %></h1>
   <div class="d-flex">
     <div class="index-panier-grid">
       <% @paniers_alentour.each  do |panier| %>
-      <div class="index-panier-card p-3">
-        <p><%= panier.titre %></p>
-        <p><%= panier.tag_list %></p>
+      <div class="index-panier-card">
+        <div class="index-panier-card-title">
+          <h2><%= panier.titre %></h2>
+        </div>
+        <div class="content-position p-3">
+          <div class="panier-card-content">
+            <p><i class="fas fa-carrot"></i> <%= panier.tag_list %></p>
+            <p><i class="fas fa-map-marker-alt"></i> <%= panier.adresse %></p>
+          </div>
+          <div class="booking-btn">
+            <a href="#" class="btn btn-primary">Réserver</a>
+          </div>
+        </div>
       </div>
     <% end %>
     </div>
