map is sticky and added some style to the cards

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -8,3 +8,9 @@
   border: 1px solid black;
   padding: 10px 14px;
 }
+
+.media-button {
+  text-align: center;
+  font-size: 1.5em;
+  color: black;
+}
