--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -4,6 +4,10 @@
 }
 
 .index-panier-card {
+  background-image: url('https://cdn2.iconfinder.com/data/icons/chinese-new-year-flat-colors/64/Chinese_New_Year_Flat_basket_fruit-512.png');
+  background-size: 25%;
+  background-repeat: no-repeat;
+  background-position: 100% 100%;
   position: relative;
   box-shadow: 0 0 12px grey;
   border-radius: 5px;
