--- a/app/views/paniers/_panier-alentour.html.erb
+++ b/app/views/paniers/_panier-alentour.html.erb
@@ -6,7 +6,7 @@
         <div class="index-panier-card-title">
           <h2><%= panier.titre %></h2>
         </div>
-        <div class="content-position p-3">
+        <div class="content-position px-3 py-2">
           <div class="panier-card-content">
             <p><i class="fas fa-carrot"></i> <%= panier.tag_list %></p>
             <p><i class="fas fa-map-marker-alt"></i> <%= panier.adresse %></p>
