--- a/app/assets/stylesheets/components/_grid.scss
+++ b/app/assets/stylesheets/components/_grid.scss
@@ -62,3 +62,15 @@
   padding: 20px 20px;
   flex-grow: 1;
 }
+
+@media (max-width: 992px) {
+  .index-panier-grid {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 768px) {
+  .index-panier-grid {
+    grid-template-columns: 1fr;
+  }
+}
