--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -27,7 +27,10 @@
           <%= image_tag "https://i.pinimg.com/originals/04/c2/12/04c212c3e90c1bfa630555f5f5fe479d.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "Proposer un panier", new_panier_path, class: "dropdown-item" %>
-            <%= link_to "Se déconnecter", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+            <%= link_to "Se déconnecter", destroy_user_session_path, {
+                method: :delete,
+                class: "dropdown-item"
+            } %>
           </div>
         </li>
       <% else %>
